# search-engine-core

./: .cursorrules  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test.content-storage  LINK_BLOCKS_IMPLEMENTATION.md  PERSONAL_PROFILE_HEADER_IMPLEMENTATION.md  README.md  TEST_RESULTS_LINK_BLOCKS.md  WEBSITE_PROFILE_API_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  setup.sh  sponsor_payment_accounts.json  test_profile_header.sh  test_website_profile_api.sh  vcpkg.json
.cursor/plans/: fix-dark-mode-system-360677f0.plan.md  personal_profile_header_7a0c8f7b.plan.md  profile-tasks-phasing-and-splitting-3d84afe9.plan.md
.cursor/rules/: build-deployment.mdc  code-review.mdc  code-style.mdc  controllers.mdc  cpp-api-patterns.mdc  documentation-organization.mdc  documentation.mdc  env-config.mdc  frontend.mdc  logging-debug.mdc  mongodb-bson.mdc  project-context.mdc  testing.mdc  uwebsockets.mdc
.github/ISSUE_TEMPLATE/: 01_language_text_processing.md  02_core_retrieval_engine.md  03_link_graph_authority.md  04_structured_data_extraction.md  05_embeddings_semantics.md  06_intent_classification.md  07_quality_spam_detection.md  08_ranking_fusion.md  09_query_pipeline.md  10_metrics_evaluation.md  11_click_modeling_online_learning.md  12_performance_caching.md  13_devops_deployment.md  14_security_compliance.md  README-issue-breakdown.md  automated_multilingual_ranking_pipeline_epic_git_hub_task_breakdown.md  config.yml  phase-1a-database-schemas.md  phase-1b-jobqueue-workers.md  phase-2a-job-api-controllers.md  phase-2b-crawler-integration.md  phase-3a-realtime-status.md  phase-3b-frontend-dashboard.md  universal-job-manager-epic.md
.github/instructions/: build-deployment.instructions.md  code-review.instructions.md  code-style.instructions.md  controllers.instructions.md  cpp-api-patterns.instructions.md  documentation.instructions.md  env-config.instructions.md  frontend.instructions.md  logging-debug.instructions.md  mongodb-bson.instructions.md  project-context.instructions.md  uwebsockets.instructions.md
.github/workflows/: README.md  build-crawler-scheduler.yml  build-js-minifier.yml  build-mongodb-drivers.yml  build-redis-sync.yml  build-search-engine.yml  ci-cd-pipeline.yml  docker-build-orchestrator.yml  validate-api-docs.yml
.husky/: pre-commit
crawler-scheduler/: .gitignore  CHANGELOG_TIMEZONE.md  DOCKER_COMPOSE_CONFIGURATION.md  DOCKER_COMPOSE_UPDATE_SUMMARY.md  Dockerfile  INTEGRATED_USAGE.md  INTEGRATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TIMEZONE_CONFIGURATION.md  TIMEZONE_DETECTION.md  TIME_WINDOW_FIX.md  docker-compose.yml  requirements.txt
crawler-scheduler/app/: __init__.py  celery_app.py  config.py  database.py  file_processor.py  rate_limiter.py  tasks.py
crawler-scheduler/scripts/: start.sh  status.sh  stop.sh  test_api.sh  test_time_window.py  test_timezone.sh  verify_setup.sh
docker/: Dockerfile.mongodb  docker-compose.prod.yml  init-job-db.js
docs/: DOCUMENTATION_ORGANIZATION_2026.md  README.md  SEARCH_ENGINE_QUALITY_ROADMAP.md
docs/api/: LINK_BLOCKS_QUICK_START.md  README.md  crawler_endpoint.md  link_blocks_endpoint.md  profile_endpoint.md  pulse_endpoint.md  website_profile_endpoint.md
docs/architecture/: SCHEDULER_INTEGRATION_SUMMARY.md  content-storage-layer.md  lazy-connection-handling.md  profile-database-schema.md
docs/archive/: DOCS_ORGANIZATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION.md
docs/development/: BUILD_ARTIFACTS.md  FILE_ORGANIZATION_SUMMARY.md
docs/features/: LINK_BLOCKS.md
docs/guides/: JS_CACHING_HEADERS_BEST_PRACTICES.md  README_STORAGE_TESTING.md
docs/implementation/: LINK_BLOCKS_IMPLEMENTATION.md  README.md
docs/privacy/: IMPLEMENTATION_SUMMARY.md  LEGAL_VAULT_PROTOCOL.md  PRIVACY_ARCHITECTURE.md  README.md
docs/testing/: README.md  TEST_RESULTS_LINK_BLOCKS.md
docs/troubleshooting/: FIX_MONGODB_WARNING.md  FLOWER_TIMEZONE_CONFIGURATION.md  MONGODB_WARNING_ANALYSIS.md  README.md
include/: ApiRateLimiter.h  content_storage.h
include/controllers/: TrackingController.h
js-minifier-service/: package-lock.json  package.json
locales/backup/: en.json
locales/en/: common.json  crawling-notification.json  home.json  pulse.json  search.json  sponsor.json
locales/fa/: common.json  crawling-notification.json  home.json  pulse.json  search.json
migrations/: start.sh
modules/: .gitignore
pages/: privacy.html
public/: coming-soon.html  privacy.html  script.js  styles.css
public/css/: crawl-request-template.css  pulse.css
public/js/: crawl-request-template.js  pulse.js
redis-sync-service/: Dockerfile  README.md  requirements.txt  sync.py
scripts/: build_and_test.sh  update_mongodb_drivers.sh
src/: ApiRateLimiter.cpp  content_storage.cpp  main.cpp  search_api.cpp
src/auth/: Jwt.cpp  PasswordHasher.cpp
src/cloudflare/: CloudflareScanner.cpp
src/common/: Base64.cpp  CMakeLists.txt  ImageValidator.cpp  SkillNormalizer.cpp  SlugCache.cpp  SlugGenerator.cpp  UrlCanonicalizer.cpp
src/controllers/: AuthController.cpp  AuthController.h  CloudflareScanController.cpp  CloudflareScanController.h  (+20 more)
src/database/: CMakeLists.txt  JobIndexes.cpp  JobMigrations.cpp
src/database/job/: CMakeLists.txt  JobIndexes.cpp  JobMigrations.cpp
src/models/: CMakeLists.txt  Job.cpp  JobConfig.cpp  JobResult.cpp
src/models/job/: CMakeLists.txt  Job.cpp  JobConfig.cpp  JobResult.cpp
src/storage/job/: CMakeLists.txt  JobStorage.cpp
templates/: crawl-request-full.inja  email-crawling-notification.inja  home.inja  profile_base.inja  profile_organization.inja  profile_person.inja  pulse.inja  search.inja  search_partial.inja  sponsor.inja
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_slug_cache.cpp  test_slug_generator.cpp  test_slug_simple.cpp
tests/content_storage/: CMakeLists.txt  mongodb_tests.cpp  redisearch_tests.cpp
tests/privacy/: CMakeLists.txt  test_encryption.cpp
tests/pulse/: CMakeLists.txt  test_pulse_core.cpp
tests/seo/: CMakeLists.txt  test_schema_validator.cpp  test_seo_generator.cpp  test_sitemap_generator.cpp
(+441 files in other folders)
